Added material-ui features in the app

--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,13 @@ body {
   flex-wrap: wrap ; 
 }
 
-.ProductContainer > .link {
+.ProductContainer > .Link {
   text-align: center ;
   width: 300px;
   box-shadow: 0 0 10px #463636;
   margin-left: 10px;
 }
 
-.ProductContainer > .link {
-  background-color: lightgrey;
+.ProductContainer > .Link:hover {
+  background-color: #fff59d;
 }
